sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:15: error: ';' expected but 'if' found.
  } if (b==0){
    ^